testsuite/tests/typing-poly-bugs/pr5673_bad.compilers.reference
File "pr5673_bad.ml", line 31, characters 22-23:
31 | let f (x : refer1) = (x : refer2)
                           ^
Error: This expression has type refer1 but an expression was expected of type
         refer2
       Types for method as_cl0 are incompatible
